Use ncc to build compact js

--- a/package.json
+++ b/package.json
@@ -7,10 +7,20 @@
     "type": "git",
     "url": "git+https://github.com/WasmVM/release-action.git"
   },
+  "scripts": {
+    "build": "ncc build index.js -o dist"
+  },
   "author": "Luis Hsu",
   "license": "Apache",
   "bugs": {
     "url": "https://github.com/WasmVM/release-action/issues"
   },
-  "homepage": "https://github.com/WasmVM/release-action"
+  "homepage": "https://github.com/WasmVM/release-action",
+  "dependencies": {
+    "@actions/core": "^1.10.1",
+    "@actions/github": "^6.0.0"
+  },
+  "devDependencies": {
+    "@vercel/ncc": "^0.38.1"
+  }
 }
