--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,3 +14,7 @@ jobs:
       uses: actions/checkout@v4
     - name: Test action
       uses: ./
+      with:
+        assets: |-
+          - a.deb
+          - b.deb
