--- a/action.yml
+++ b/action.yml
@@ -8,6 +8,9 @@ inputs:
   assets:
     description: 'Assets of this release'
     required: false
+  token:
+    description: 'GitHub API token'
+    required: true
 runs:
   using: 'node20'
   main: 'dist/index.js'
