Create release with assets

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,5 +17,5 @@ jobs:
       with:
         token: ${{secrets.GITHUB_TOKEN}}
         assets: |-
-          a.deb
-          b.deb
+          a.txt
+          b.log
