Update draft input

--- a/action.yml
+++ b/action.yml
@@ -11,6 +11,10 @@ inputs:
   token:
     description: 'GitHub API token'
     required: true
+  draft:
+    description: 'Is draft release?'
+    required: true
+    default: false
 runs:
   using: 'node20'
   main: 'dist/index.js'
