--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "url": "git+https://github.com/WasmVM/release-action.git"
   },
   "scripts": {
-    "build": "ncc build index.js -o dist"
+    "build": "ncc build index.js -o dist -m"
   },
   "author": "Luis Hsu",
   "license": "Apache",
@@ -18,7 +18,8 @@
   "homepage": "https://github.com/WasmVM/release-action",
   "dependencies": {
     "@actions/core": "^1.10.1",
-    "@actions/github": "^6.0.0"
+    "@actions/github": "^6.0.0",
+    "glob": "^10.3.10"
   },
   "devDependencies": {
     "@vercel/ncc": "^0.38.1"
